k8s-manifest/springboot/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: springboot
  namespace: springboot
  labels:
    app: springboot
spec:
  replicas: 2
  selector:
    matchLabels:
      app: springboot
  template:
    metadata:
      labels:
        app: springboot
    spec:
      containers:
      - name: springboot
        image: 248189904697.dkr.ecr.ap-northeast-2.amazonaws.com/springboot:241126-3
        # image: amazon/aws-cli
        # command: ["/bin/sh", "-c"]
        # args: ["while true; do sleep 3600; done"]
        ports:
        - containerPort: 8080
        # resources:
        #   requests:
        #     cpu: "100m"
        #     memory: "256Mi"
        #   limits:
        #     cpu: "500m"
        #     memory: "500Mi"
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchLabels:
                  app: springboot
              topologyKey: kubernetes.io/hostname
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: eks.amazonaws.com/nodegroup
                operator: In
                values:
                - spoon              
            - matchExpressions:
              - key: topology.kubernetes.io/zone
                operator: In
                values:
                - ap-northeast-2a
                - ap-northeast-2c
