k8s-manifest/springboot/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: springboot
  namespace: springboot
  labels:
    app: springboot
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
  selector:
    app: springboot
  type: ClusterIP
